--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
                 </div>
             </section>
 
-
-
             <section id="banner-txt">
-                <p>설렘과 즐거움의 시작,<p>
-                        <h1>제주항공과 함께</h1>
+                    <p>설렘과 즐거움의 시작,<p>
+                    <h1>제주항공과 함께</h1>
             </section>
         </div>
 
@@ -67,9 +65,9 @@
 
     <section id="info-box">
         <div class="img-box">
-            <img src="images/jeju.jpg" alt="제주">
-            <img src="images/busan.jpg" alt="부산">
-            <img src="images/tyoko.jpg" alt="도쿄">
+            <a href="#"><img src="images/jeju.jpg" alt="제주"></a>
+            <a href="#"><img src="images/busan.jpg" alt="부산"></a>
+            <a href="#"><img src="images/tyoko.jpg" alt="도쿄"></a>
         </div>
         <div class="img-detail">
             <div class="box1">
@@ -113,9 +111,9 @@
         <p>customer</p>
         <div class="customer-underline"></div>
         <div class="customer-box">
-            <img src="images/question.jpg" alt="question">
-            <img src="images/notice.jpg" alt="notice">
-            <img src="images/carrier.jpg" alt="carrier">
+            <a href="#"><img src="images/question.jpg" alt="question"></a>
+            <a href="#"><img src="images/notice.jpg" alt="notice"></a>
+            <a href="#"><img src="images/carrier.jpg" alt="carrier"></a>
         </div>
     </sesction>
 
